Added DAOs for getting listings and getting orders and refactored small details on xml views

--- a/Front-end-template/app/src/main/res/layout/active_order_item.xml
+++ b/Front-end-template/app/src/main/res/layout/active_order_item.xml
@@ -15,7 +15,7 @@
 
         <TextView
             android:id="@+id/order_description"
-            android:background="@android:color/white"
+            android:background="@drawable/panels"
             android:textColor="@color/colorAccent"
             android:fontFamily="@font/nunito_semibold"
             android:textSize="18sp"
