--- a/Front-end-template/app/src/main/res/layout/fragment_show_listings.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_show_listings.xml
@@ -5,6 +5,7 @@
     android:id="@+id/searchFood"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_light"
     tools:context=".ShowListings">
 
     <!-- TODO: Update blank fragment layout -->
