--- a/Front-end-template/app/src/main/res/layout/menu_item.xml
+++ b/Front-end-template/app/src/main/res/layout/menu_item.xml
@@ -18,30 +18,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <View
+            android:id="@+id/gradient"
+            android:background="@drawable/slider_gradient"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
         <!--android:text="Whitest Rice"-->
 
         <TextView
             android:id="@+id/food_description"
-            android:background="@color/colorAccent"
             android:textColor="@android:color/white"
             android:fontFamily="@font/nunito_semibold"
             android:textSize="18sp"
-            android:gravity="start"
+            android:layout_alignBottom="@id/food_image"
             android:layout_width="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_height="wrap_content" />
+            android:layout_alignParentBottom="false"
+            android:layout_height="50dp" />
 
-        <TextView
-            android:id="@+id/food_location"
-            android:background="@color/colorAccent"
-            android:textColor="@android:color/white"
-            android:fontFamily="@font/nunito_semibold"
-            android:textSize="16sp"
-            android:gravity="start"
-            android:layout_below="@id/food_description"
-            android:layout_width="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 
