Fixed HTTP to allow for easier testing

--- a/Front-end-template/app/src/main/res/layout/menu_item.xml
+++ b/Front-end-template/app/src/main/res/layout/menu_item.xml
@@ -14,9 +14,9 @@
         <!--android:src="@drawable/rice"-->
         <ImageView
             android:id="@+id/food_image"
-            android:scaleType="centerCrop"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
 
         <View
             android:id="@+id/gradient"
@@ -29,13 +29,14 @@
 
         <TextView
             android:id="@+id/food_description"
-            android:textColor="@android:color/white"
-            android:fontFamily="@font/nunito_semibold"
-            android:textSize="18sp"
-            android:layout_alignBottom="@id/food_image"
             android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignBottom="@id/food_image"
             android:layout_alignParentBottom="false"
-            android:layout_height="50dp" />
+            android:fontFamily="@font/nunito_semibold"
+            android:text="fuk u raymond "
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
 
     </RelativeLayout>
