--- a/Front-end-template/app/src/main/res/drawable/panels.xml
+++ b/Front-end-template/app/src/main/res/drawable/panels.xml
@@ -12,12 +12,9 @@
         android:right="0dp"
         android:bottom="0dp"
         />
-    <size
-        android:width="270dp"
-        android:height="60dp"
-        />
+
     <stroke
-        android:width="1dp"
-        android:color="#F7F9F9"
+        android:width="3dp"
+        android:color="##CACFD2"
         />
 </shape>
