--- a/Front-end-template/app/src/main/res/layout/active_order_item.xml
+++ b/Front-end-template/app/src/main/res/layout/active_order_item.xml
@@ -22,7 +22,7 @@
             android:gravity="center_vertical"
             android:layout_centerVertical="true"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
 
     </RelativeLayout>
