--- a/Front-end-template/app/src/main/res/drawable/panels.xml
+++ b/Front-end-template/app/src/main/res/drawable/panels.xml
@@ -14,7 +14,7 @@
         />
 
     <stroke
-        android:width="3dp"
-        android:color="##CACFD2"
+        android:width="2dp"
+        android:color="#E7D6C8"
         />
 </shape>
