--- a/Front-end-template/app/src/main/res/layout/fragment_food_detail.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_food_detail.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/food_details">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
@@ -35,6 +34,7 @@
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
+                android:title="Food Name"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -89,6 +89,7 @@
                         android:id="@id/food_description"
                         android:layout_marginTop="8dp"
                         android:padding="12dp"
+                        android:text="Food Name"
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -138,13 +139,13 @@
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
-            
+
             <android.support.v7.widget.CardView
                 app:cardElevation="5dp"
                 app:cardUseCompatPadding="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                
+
                 <TextView
                     android:id="@+id/food_description"
                     android:layout_marginTop="12dp"
@@ -155,11 +156,11 @@
                     android:textSize="14sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                
+
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
-        
+
     </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
